Quiz buttons + dark mode fix
Added start button.
Added quiz questions and answers.
Added startQuiz() function.
Added questionAnswer() function.

--- a/style.css
+++ b/style.css
@@ -12,8 +12,17 @@ body {
     
 }
 
+.hidden {
+    display: none;
+}
+
 .dark-mode {
-    background-color: black;
+    background-color: #282828;
+    color: white;
+}
+
+.dark-mode #quizButtons button {
+    background-color: #3f3f3f;
     color: white;
 }
 
